@@ -1,4 +1,3 @@
-require 'cairo/context/quad'
 require 'cairo/context/rectangle'
 require 'cairo/context/circle'
 require 'cairo/context/path'
@@ -7,7 +6,6 @@ require 'cairo/context/color'
 
 module Cairo
   class Context
-    include Quad
     include Rectangle
     include Circle
     include Path
